--- a/Laboration/docu.html
+++ b/Laboration/docu.html
@@ -11,11 +11,6 @@
         background-color: #f8f8ff;
         font-family: monospace;
       }
-      .card {
-        margin: 0 5px 0 0;
-        border: 1px solid #1D3557;
-        border-radius: 0;
-      }
     </style>
   </head>
 <body>
@@ -33,18 +28,12 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="docu.html">Documentation</a>
+          <a class="nav-link" href="#">Documentation</a>
         </li>
       </ul>
-
-      <form class="form-inline my-2 my-lg-0" id="form">
-        <input class="form-control mr-sm-2" type="search" id="search" placeholder="Enter Name or ID" aria-label="Search">
-        <button class="btn btn-danger my-2 my-sm-0" type="submit">Search Pokedex</button>
-      </form>
-
     </div>
   </nav>
 
