--- a/Laboration/index.html
+++ b/Laboration/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta name="author" content="Robin Johansson Speelgren">
-    <title>Pokedex ISGB13</title>
+    <title>Pokedéx ISGB13</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
       body {
         background-color: #f8f8ff;
@@ -16,13 +16,16 @@
         border: 1px solid #1D3557;
         border-radius: 0;
       }
+      #nav-img {
+        height: 25px;
+      }
     </style>
   </head>
 <body>
   <div class="p-5 bg-danger text-white text-center">
     <h1>Pokedex</h1>
     <p>JSON API Laboration | ISGB13 Portabla Format</p>
-    <a class="text-info" href="https://pokeapi.co/">API: https://pokeapi.co/</a>
+    <a class="text-info" href="https://pokeapi.co/" target="_blank">https://pokeapi.co/</a>
   </div>
   <nav class="navbar navbar-expand-lg navbar-light bg-muted">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,6 +40,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="docu.html">Documentation</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/speelgren" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/733/733609.png" id="nav-img" alt="github logo"></a>
         </li>
       </ul>
 
