--- a/Laboration/docu.html
+++ b/Laboration/docu.html
@@ -18,10 +18,11 @@
   </head>
 <body>
   <div class="p-5 bg-danger text-white text-center">
-    <h1>Pokedex</h1>
+    <h1>POKÉDEX</h1>
     <p>JSON API Laboration | ISGB13 Portabla Format</p>
     <a class="text-info" href="https://pokeapi.co/" target="_blank">https://pokeapi.co/</a>
   </div>
+
   <nav class="navbar navbar-expand-lg navbar-light bg-muted">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
