--- a/Laboration/index.html
+++ b/Laboration/index.html
@@ -6,30 +6,7 @@
     <meta name="author" content="Robin Johansson Speelgren">
     <title>Pokedéx ISGB13</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <style>
-      body {
-        background-color: #f8f8ff;
-        font-family: monospace;
-      }
-      .card {
-        margin: 0 5px 5px 0;
-        border: 1px solid #1D3557;
-        border-radius: 0;
-      }
-      #nav-img {
-        height: 25px;
-      }
-    /*
-     * https://stackoverflow.com/questions/48328514/how-to-display-table-in-two-columns
-    */
-      table, tr, td {
-        display: block !important;
-      }
-      tr {
-        float: left !important;
-        width: 50% !important;
-      }
-    </style>
+    <link rel="stylesheet" href="style/style.css">
   </head>
 <body>
   <div class="p-5 bg-danger text-white text-center">
@@ -50,7 +27,7 @@
           <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="docu.html">Documentation</a>
+          <a class="nav-link" href="html/docu.html">Documentation</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/speelgren" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/733/733609.png" id="nav-img" alt="github logo"></a>
@@ -64,7 +41,7 @@
     </div>
   </nav>
 
-  <div class="container">
+  <div class="container-fluid">
     <main>
       <div id="content" class="my-4">
         <!--
@@ -77,7 +54,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script src="script.js"></script>
+  <script src="script/script.js"></script>
 
   </body>
 </html>
