--- a/Laboration JSON/html/docu.html
+++ b/Laboration JSON/html/docu.html
@@ -1,3 +1,5 @@
+<!-- ISGB13 -->
+
 <!DOCTYPE html>
 <html lang="sv">
   <head>
@@ -6,17 +8,7 @@
     <meta name="author" content="Robin Johansson Speelgren">
     <title>Pokedéx ISGB13</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <style>
-      body {
-        
-        background-color: #f8f8ff;
-        font-family: monospace;
-      }
-      #nav-img {
-
-        height: 25px;
-      }
-    </style>
+    <link rel="stylesheet" href="../style/style.css">
   </head>
 <body>
   <div class="p-5 bg-danger text-white text-center">
@@ -25,11 +17,11 @@
     <a class="text-info" href="https://pokeapi.co/" target="_blank">https://pokeapi.co/</a>
   </div>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-muted">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="#">ISGB13 API</a>
+    <a class="navbar-brand" href="#">ISGB13</a>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -49,9 +41,17 @@
   <div class="container">
     <main>
       <div id="content" class="my-4">
-        <!--
-        all info här.
-        -->
+
+        <article>
+          <section>
+            <h2>API:et</h2>
+            <a href="https://pokeapi.co/">Länk<a>
+            <p>Text</p>
+            <h2>Sökning</h2>
+            <p>Text</p>
+          </section>
+        </article>
+
       </div>
     </main>
   </div>
