--- a/Laboration JSON/index.html
+++ b/Laboration JSON/index.html
@@ -1,3 +1,5 @@
+<!-- ISGB13 -->
+
 <!DOCTYPE html>
 <html lang="sv">
   <head>
@@ -15,11 +17,11 @@
     <a class="text-info" href="https://pokeapi.co/" target="_blank">https://pokeapi.co/</a>
   </div>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-muted">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="#">ISGB13 API</a>
+    <a class="navbar-brand" href="#">ISGB13</a>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
