början på graf. + documentation.

--- a/Laboration JSON/html/docu.html
+++ b/Laboration JSON/html/docu.html
@@ -38,17 +38,29 @@
     </div>
   </nav>
 
-  <div class="container">
+  <div class="container-fluid">
     <main>
       <div id="content" class="my-4">
 
         <article>
           <section>
             <h2>API:et</h2>
-            <a href="https://pokeapi.co/">Länk<a>
-            <p>Text</p>
-            <h2>Sökning</h2>
-            <p>Text</p>
+            <a href="https://pokeapi.co/">Länk till POKEAPI.co</a>
+            <h2>SÖK</h2>
+              <p>
+              Sökning kan göras med namn eller ID.<br>
+              Vid ett sök som genererar ett felmeddelande, t.ex. 404 när användaren söker efter en karaktär som inte finns i JSON-strängen- visas ett felmeddelande enligt nedan:<br>
+              <img src="../img/felmeddelande.png" width="20%;">
+              </p>
+            <h2>Begränsningar</h2>
+              <p>
+              API:et tillhandahåller inte information om spel senare än Pokémon Black 2 & White 2 under spel-index ("game_indices").<br>
+              Senare generationer än Generation 5 saknar viss information.
+              </p>
+            <h2>Webbsidan</h2>
+              <p>
+              Skapad med HTML, CSS, JavaScript och med hjälp av <a href="https://getbootstrap.com/">Bootstrap</a> och <a href="https://www.chartjs.org/">Chart.js</a>
+              </p>
           </section>
         </article>
 
