--- a/Laboration XML/OMDb/index.html
+++ b/Laboration XML/OMDb/index.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
 <body>
-  <div class="p-5 bg-danger text-white text-center">
-    <h1></h1>
+  <div class="p-5 bg-primary text-white text-center">
+    <h1>Open Movie Database</h1>
     <p>XML API Laboration | ISGB13 Portabla Format</p>
-    <a class="text-info" href="#" target="_blank"></a>
+    <a class="text-danger" href="http://omdbapi.com/" target="_blank">http://omdbapi.com/</a>
   </div>
 
   <nav class="navbar navbar-expand-lg navbar-light">
@@ -30,6 +30,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="html/docu.html">Documentation</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/speelgren" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/733/733609.png" id="nav-img" alt="github logo"></a>
         </li>
       </ul>
 
