Alla pokemon på startskärmen + det går att klicka på dem

--- a/Laboration JSON/POKEAPI/index.html
+++ b/Laboration JSON/POKEAPI/index.html
@@ -47,9 +47,14 @@
 
   <div class="container-fluid">
     <main>
+      <div id="fetchContent" class="my-4">
+        <!--
+        alla pokemon här.
+        -->
+      </div>
       <div id="content" class="my-4">
         <!--
-        all info här.
+        all specifik info om pokemon här.
         -->
       </div>
     </main>
