--- a/Laboration JSON/POKEAPI/index.html
+++ b/Laboration JSON/POKEAPI/index.html
@@ -32,7 +32,7 @@
           <a class="nav-link" href="html/docu.html">Documentation</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://github.com/speelgren" target="_blank">
+          <a class="nav-link" href="https://github.com/speelgren/ISGB13" target="_blank">
             <img src="https://cdn-icons-png.flaticon.com/512/733/733609.png" id="nav-img" alt="github logo">
           </a>
         </li>
