--- a/Laboration JSON/POKEAPI/index.html
+++ b/Laboration JSON/POKEAPI/index.html
@@ -21,19 +21,13 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="#">ISGB13</a>
+      <div class="btn btn-danger">HOME</div>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="html/docu.html">Documentation</a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/speelgren/ISGB13" target="_blank">
-            <img src="https://cdn-icons-png.flaticon.com/512/733/733609.png" id="nav-img" alt="github logo">
+            <img src="https://cdn-icons-png.flaticon.com/512/733/733609.png" id="nav-img" alt="github-logo">
           </a>
         </li>
       </ul>
@@ -47,16 +41,17 @@
 
   <div class="container-fluid">
     <main>
-      <div id="fetchContent" class="my-4">
-        <!--
-        alla pokemon här.
-        -->
-      </div>
-      <div id="content" class="my-4">
-        <!--
-        all specifik info om pokemon här.
-        -->
-      </div>
+      <h3 id="firstGen">Första Generationen</h3>
+        <div id="fetchContent" class="my-4">
+          <!--
+          alla pokemon här.
+          -->
+        </div>
+        <div id="content" class="my-4">
+          <!--
+          all specifik info om pokemon här.
+          -->
+        </div>
     </main>
   </div>
 
