--- a/Laboration JSON/POKEAPI/index.html
+++ b/Laboration JSON/POKEAPI/index.html
@@ -21,7 +21,7 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
-      <div class="btn btn-danger">HOME</div>
+      <button class="btn btn-danger">HOME</button>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -41,7 +41,7 @@
 
   <div class="container-fluid">
     <main>
-      <h3 id="firstGen">Första Generationen</h3>
+      <h3 id="firstGen">First Generation</h3>
         <div id="fetchContent" class="my-4">
           <!--
           alla pokemon här.
