--- a/Laboration JSON/POKEAPI/index.html
+++ b/Laboration JSON/POKEAPI/index.html
@@ -41,16 +41,12 @@
 
   <div class="container-fluid">
     <main>
-      <h3 id="firstGen">First Generation</h3>
+      <h3 class="firstGen">First Generation</h3>
         <div id="fetchContent" class="my-4">
-          <!--
-          alla pokemon här.
-          -->
+          <!-- alla pokemon här. -->
         </div>
         <div id="content" class="my-4">
-          <!--
-          all specifik info om pokemon här.
-          -->
+          <!-- all specifik info om pokemon här. -->
         </div>
     </main>
   </div>
