--- a/Laboration JSON/POKEAPI/index.html
+++ b/Laboration JSON/POKEAPI/index.html
@@ -7,6 +7,7 @@
     <title>Pokedéx ISGB13</title>
     <!-- Bootstrap 4 CSS: -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    
     <link rel="stylesheet" href="style/style.css">
   </head>
 <body>
@@ -44,7 +45,7 @@
         <div id="fetchContent" class="my-4">
           <!-- alla pokemon här. -->
         </div>
-        <div id="content" class="my-4">
+        <div id="content" class="my-4 d-flex flex-wrap justify-content-center">
           <!-- all specifik info om pokemon här. -->
         </div>
     </main>
