--- a/Laboration JSON/POKEAPI/index.html
+++ b/Laboration JSON/POKEAPI/index.html
@@ -39,17 +39,15 @@
     </div>
   </nav>
 
-  <div class="container-fluid">
-    <main>
-      <h3 class="firstGen">First Generation</h3>
-        <div id="fetchContent" class="my-4">
-          <!-- alla pokemon här. -->
-        </div>
-        <div id="content" class="my-4 d-flex flex-wrap justify-content-center">
-          <!-- all specifik info om pokemon här. -->
-        </div>
-    </main>
-  </div>
+  <main class="container-fluid">
+    <h2 class="firstGen">First Generation</h2>
+      <section id="fetchContent" class="my-4">
+        <!-- alla pokemon här. -->
+      </section>
+      <section id="content" class="my-4 d-flex flex-wrap justify-content-center">
+        <!-- all specifik info om pokemon här. -->
+      </section>
+  </main>
 
     <!-- Bootstrap 4 JS: -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
