--- a/Laboration JSON/POKEAPI/index.html
+++ b/Laboration JSON/POKEAPI/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="p-5 bg-danger text-white text-center">
     <h1>POKÉDEX</h1>
-    <p>JSON API Laboration | ISGB13 Portabla Format</p>
+    <h6>JSON API Laboration | ISGB13 Portabla Format</h6>
     <a class="text-info" href="https://pokeapi.co/" target="_blank">https://pokeapi.co/</a>
   </div>
 
