--- a/Laboration JSON/POKEAPI/index.html
+++ b/Laboration JSON/POKEAPI/index.html
@@ -10,20 +10,24 @@
     <link rel="stylesheet" href="style/style.css">
   </head>
 <body>
-  <div class="p-5 bg-danger text-white text-center">
+  <div class="p-5 bg-danger text-center">
     <h1>POKÉDEX</h1>
-    <h6>JSON API Laboration | ISGB13 Portabla Format</h6>
-    <a class="text-info" href="https://pokeapi.co/" target="_blank">https://pokeapi.co/</a>
+    <h6>JSON API | ISGB13 Portabla Format</h6>
   </div>
 
   <nav class="navbar navbar-expand-lg navbar-light">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
-    <button class="btn btn-danger">HOME</button>
+    <button class="btn">HOME</button>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="https://pokeapi.co/" target="_blank">
+            <img src="https://raw.githubusercontent.com/PokeAPI/media/master/logo/pokeapi_256.png" id="nav-img" alt="github-logo">
+          </a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/speelgren/ISGB13" target="_blank">
             <img src="https://cdn-icons-png.flaticon.com/512/733/733609.png" id="nav-img" alt="github-logo">
@@ -33,7 +37,7 @@
 
       <form class="form-inline my-2 my-lg-0" id="form">
         <input class="form-control mr-sm-2" type="search" id="search" placeholder="Enter Name or ID" aria-label="Search">
-        <button class="btn btn-danger my-2 my-sm-0" type="submit">Search Pokedex</button>
+        <button class="btn my-2 my-sm-0" type="submit">Search Pokedex</button>
       </form>
     </div>
   </nav>
@@ -45,7 +49,7 @@
         <span class="sr-only">Loading...</span>
       </div>
     </div>
-    <section id="fetchContent" class="my-4 d-none">
+    <section id="fetchContent" class="d-none">
       <!-- alla pokemon här. -->
     </section>
     <section id="content" class="my-4 d-flex flex-wrap justify-content-center">
