--- a/Laboration JSON/POKEAPI/index.html
+++ b/Laboration JSON/POKEAPI/index.html
@@ -24,13 +24,13 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link nav-img" href="https://pokeapi.co/" target="_blank">
-            <img src="https://raw.githubusercontent.com/PokeAPI/media/master/logo/pokeapi_256.png" alt="pokeapi-logo">
+          <a class="nav-link" href="https://pokeapi.co/" target="_blank">
+            <img src="https://raw.githubusercontent.com/PokeAPI/media/master/logo/pokeapi_256.png" class="nav-img" alt="pokeapi-logo">
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-img" href="https://github.com/speelgren/ISGB13" target="_blank">
-            <img src="https://cdn-icons-png.flaticon.com/512/733/733609.png" alt="github-logo">
+          <a class="nav-link" href="https://github.com/speelgren/ISGB13" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/733/733609.png" class="nav-img" alt="github-logo">
           </a>
         </li>
       </ul>
