--- a/Laboration JSON/POKEAPI/index.html
+++ b/Laboration JSON/POKEAPI/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="p-5 bg-danger text-center">
     <h1>POKÉDEX</h1>
-    <h6>JSON API | ISGB13 Portabla Format</h6>
+    <h6>ISGB13 PORTABLA FORMAT</h6>
   </div>
 
   <nav class="navbar navbar-expand-lg navbar-light">
